[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/Popups/Set State Name.gd" type="Script" id=1]

[node name="Set State Name" type="WindowDialog"]
margin_left = 1.0
margin_top = 1.0
margin_right = 355.0
margin_bottom = 49.0
window_title = "Set State Name"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 354.0
margin_bottom = 48.0

[node name="SelectedStateName" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_right = 354.0
margin_bottom = 24.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 354.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="Accept" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 175.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 354.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
